--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,20 @@ header .top_header .shop_accaunt a:hover {
   transform: scale(1.1);
   color: #EB6D20;
 }
+header span {
+  position: absolute;
+  top: 12px;
+  right: 174px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background: #EB6D20;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 12px;
+}
 
 .shop_accaunt a {
   text-decoration: none;
@@ -155,7 +169,196 @@ nav a:hover {
 .part_1 {
   width: 1320px;
   display: flex;
-  justify-content: space-between;
-  margin: auto;
+  gap: 24px;
+  margin: 0 auto;
   margin-top: 24px;
+}
+.part_1 div {
+  display: flex;
+  gap: 24px;
+}
+.part_1 .image_wrapper {
+  position: relative;
+  border-radius: 10px;
+}
+.part_1 .image_wrapper span {
+  position: absolute;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  text-align: left;
+  left: 16px;
+  bottom: 16px;
+  color: #fff;
+}
+.part_1 .image_wrapper img {
+  border-radius: 5px;
+}
+
+.part_2 {
+  margin: auto;
+}
+.part_2 .cardWrappers {
+  display: flex;
+  gap: 24px;
+  margin-top: 24px;
+}
+.part_2 .cardWrappers .card {
+  width: 312px;
+  height: 418px;
+  border-radius: 5px;
+  position: relative;
+}
+.part_2 .cardWrappers .card_1 {
+  background: #D3FBD9;
+}
+
+.card .color {
+  position: absolute;
+  top: 244px;
+  left: 24px;
+}
+.card .color h2 {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+  text-align: left;
+  color: #3E3E3E;
+}
+.card .color .colors {
+  display: flex;
+  gap: 8px;
+}
+.card .color button {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 1px solid transparent;
+  margin-top: 12px;
+  background: #7CB93E;
+  transition: all 0.5s;
+}
+.card .color button:nth-child(2) {
+  background: #33ABC6;
+}
+.card .color button:nth-child(3) {
+  background: #1CCD8D;
+}
+.card .color button:nth-child(4) {
+  background: #3F65EA;
+}
+.card .color button:nth-child(5) {
+  background: #F64A69;
+}
+.card .color button:nth-child(6) {
+  background: #A635EC;
+}
+.card .color button:nth-child(7) {
+  background: #F9A85D;
+}
+.card .color button:hover {
+  border: 1px solid #333;
+  transform: scale(1.1);
+  transform: translate(0, -5px);
+}
+.card .card_info {
+  position: absolute;
+  top: 292px;
+  left: 24px;
+  width: 264px;
+  margin-top: 24px;
+}
+.card .card_info p {
+  width: 264px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #3E3E3E;
+}
+.card .card_info h3 {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 18px;
+  text-align: left;
+  color: #3E3E3E;
+  margin-top: 40px;
+}
+.card i {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 1s;
+  cursor: pointer;
+}
+.card i:hover {
+  color: #F64A69;
+  transform: scale(1.1);
+}
+
+.card img {
+  position: absolute;
+  top: 56px;
+  left: 56px;
+}
+
+.card_2 {
+  background: #FFE4BD;
+}
+.card_2 .colors button:nth-child(2) {
+  background: #3F65EA;
+}
+.card_2 .colors button:nth-child(3) {
+  background: #F64A69;
+}
+.card_2 .colors button:nth-child(4) {
+  background: #A635EC;
+}
+.card_2 .colors button:nth-child(5) {
+  background: #F9A85D;
+}
+.card_2 .card_info h3 {
+  margin-top: 15px;
+}
+
+.card_3 {
+  background: #D9ABFD;
+}
+.card_3 button:nth-child(1) {
+  background: #3F65EA;
+}
+.card_3 button:nth-child(2) {
+  background: #F64A69;
+}
+.card_3 button:nth-child(3) {
+  background: #A635EC;
+}
+.card_3 .card_info h3 {
+  margin-top: 15px;
+}
+
+.card_4 {
+  background: #FDF0AB;
+}
+.card_4 .colors button:nth-child(1) {
+  background: #7CB93E;
+}
+.card_4 .colors button:nth-child(2) {
+  background: #1CCD8D;
+}
+.card_4 .colors button:nth-child(3) {
+  background: #F64A69;
+}
+.card_4 .colors button:nth-child(4) {
+  background: #A635EC;
+}
+.card_4 .colors button:nth-child(5) {
+  background: #F9A85D;
 }/*# sourceMappingURL=style.css.map */
