--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,18 @@
   margin: auto;
 }
 
+main {
+  margin: auto;
+}
+
 button {
   cursor: pointer;
 }
 
 header {
   margin: auto;
+  z-index: 10;
+  position: fixed;
   max-width: 1920px;
   width: 100%;
   height: 152px;
@@ -166,6 +172,21 @@ nav a:hover {
   border-bottom: 4px solid #EB6D20;
 }
 
+.bg {
+  padding-top: 512px;
+  background: #F5F6F8;
+  height: 428px;
+  width: 1920px;
+  z-index: -1;
+  margin: auto;
+}
+
+section {
+  padding-top: 70px;
+  z-index: 1;
+  margin: -428px auto;
+}
+
 .part_1 {
   width: 1320px;
   display: flex;
@@ -210,6 +231,7 @@ nav a:hover {
   position: relative;
 }
 .part_2 .cardWrappers .card_1 {
+  min-width: 312px;
   background: #D3FBD9;
 }
 
@@ -310,6 +332,8 @@ nav a:hover {
 }
 
 .card_2 {
+  min-width: 312px;
+  height: 418px;
   background: #FFE4BD;
 }
 .card_2 .colors button:nth-child(2) {
@@ -329,6 +353,8 @@ nav a:hover {
 }
 
 .card_3 {
+  min-width: 312px;
+  height: 418px;
   background: #D9ABFD;
 }
 .card_3 button:nth-child(1) {
@@ -345,6 +371,8 @@ nav a:hover {
 }
 
 .card_4 {
+  min-width: 312px;
+  height: 418px;
   background: #FDF0AB;
 }
 .card_4 .colors button:nth-child(1) {
