--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,16 +4,22 @@
     box-sizing: border-box;
     font-family: 'Poppins';
  }
+
  .container{
     max-width: 1320px;
     // width: 100%;
 margin: auto;
+}
+main{
+    margin: auto;
 }
 button {
     cursor: pointer;
 }
  header{
     margin: auto;
+    z-index: 10;
+    position: fixed;
     max-width: 1920px;
     width: 100%;
     height: 152px;
@@ -185,6 +191,19 @@ nav{
         border-bottom: 4px solid #EB6D20;
     }
 }
+.bg{
+    padding-top: 512px;
+    background: #F5F6F8;
+    height: 428px;
+    width: 1920px;
+    z-index: -1;
+    margin: auto;
+}
+section{
+    padding-top: 70px;
+    z-index: 1;
+    margin: -428px auto;
+}
 .part_1 {
     width: 1320px;
     // display: inline-block;
@@ -228,6 +247,7 @@ nav{
         position: relative;
     }
         .card_1{
+            min-width: 312px;
             background: #D3FBD9;
         }
     
@@ -333,6 +353,8 @@ nav{
     
 }
 .card_2{
+    min-width: 312px;
+    height: 418px;
     background: #FFE4BD;
     .colors{
         button:nth-child(2){
@@ -354,6 +376,8 @@ nav{
     
 }
 .card_3{
+    min-width: 312px;
+    height: 418px;
     background: #D9ABFD;
     button:nth-child(1){
         background: #3F65EA;
@@ -370,6 +394,8 @@ nav{
 
 }
 .card_4{
+    min-width: 312px;
+    height: 418px;
     background: #FDF0AB;
     .colors{
         button:nth-child(1){
