--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,7 +19,7 @@ button {
  header{
     margin: auto;
     z-index: 10;
-    position: fixed;
+    // position: fixed;
     max-width: 1920px;
     width: 100%;
     height: 152px;
@@ -192,7 +192,7 @@ nav{
     }
 }
 .bg{
-    padding-top: 512px;
+    // padding-top: 512px;
     background: #F5F6F8;
     height: 428px;
     width: 1920px;
@@ -202,7 +202,7 @@ nav{
 section{
     padding-top: 70px;
     z-index: 1;
-    margin: -428px auto;
+    margin: -498px auto;
 }
 .part_1 {
     width: 1320px;
