--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,16 +17,14 @@ button {
     cursor: pointer;
 }
  header{
-    margin: auto;
     z-index: 10;
     // position: fixed;
     max-width: 1920px;
     width: 100%;
     height: 152px;
     background: #FFF9F3;
-    .header_wrapper{
-
-    }
+    margin: auto;
+   
     .top_header{
         display: flex;
         justify-content: space-between;
@@ -232,6 +230,16 @@ section{
         img{
             border-radius: 5px;
         }
+        a{
+            transition: all 0.5s linear;
+        }
+        a:hover{
+            filter:drop-shadow(7px 5px 5px darkblue);
+            img{
+                filter: contrast(130%);
+            }
+            
+        }
     }
 }
 .part_2{
@@ -245,13 +253,13 @@ section{
         height: 418px;
         border-radius: 5px;
         position: relative;
+        transition: all 1s linear;
     }
-        .card_1{
-            min-width: 312px;
-            background: #D3FBD9;
-        }
-    
+    .card_1{
+        background: #D3FBD9;
     }
+    }
+
     
     
 }
@@ -350,7 +358,15 @@ section{
     position: absolute;
     top: 56px;
     left: 56px;
-    
+    transition: all 1.2s ;
+}
+.card:hover{
+    filter: drop-shadow(5px 5px 7px );
+    img{
+        transform: scale(1.2);
+        filter: contrast(150%);
+        // filter:drop-shadow(25px 7px 7px #333);
+    }
 }
 .card_2{
     min-width: 312px;
@@ -373,7 +389,6 @@ section{
     .card_info h3{
         margin-top: 15px;
     }
-    
 }
 .card_3{
     min-width: 312px;
@@ -414,9 +429,77 @@ section{
             background: #F9A85D;
         }
     }
+    .card_info h3{
+        margin-top: 15px;
+    }
     
     
 }
+.part_3{
+    width: 1320px;
+    height: 200px;
+    margin: 48px auto;
+    background: #fff;
+    .cards_3{
+        width: 1320px;
+        height: 200px;
+        margin: auto;
+        display: flex;
+        gap: 10px;
+        .card__3{
+            margin: auto;
+            width: 424px;
+            height: 174px;
+            background: #F5F6F8;
+            display: flex;
+            gap: 74px;
+            border-radius: 5px;
+            border: 1px solid transparent;
+            transition: all 1s linear;
+        }
 
+    }
+}
+.card__3{
+    transition: all 1s linear;
+    h2{
+    width: 172px;
+    margin-top: 45px;
+    margin-left: 24px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: left;
+    color: #000;
+    transition: all 1s linear;
+
+    }
+    p{
+        width: 176px;
+        margin-top: 12px;
+        margin-left: 24px;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 16px;
+        text-align: left;
+        color: #292929;
+    }
+    img{
+        margin-top: 24px;
+        transition: all 0.6s;
+    }
     
+}
+.card__3:hover{
+    h2{
+        text-shadow: 5px 4px 5px rgb(132, 123, 123);
+    }
+    box-shadow: 5px 5px 10px #888;
+    p{
+        text-shadow: 5px 4px 5px rgb(132, 123, 123);
+    }
+    img{
+        filter: contrast(150%);
+    }
+}  
 
