--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 .container {
   max-width: 1320px;
   margin: auto;
+  position: relative;
 }
 
 main {
@@ -81,12 +82,12 @@ header .top_header .shop_accaunt a:hover {
   transform: scale(1.1);
   color: #EB6D20;
 }
-header span {
+header .container span {
   position: absolute;
-  top: 12px;
-  right: 174px;
-  width: 24px;
-  height: 24px;
+  top: 15px;
+  right: 74px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   background: #EB6D20;
   display: flex;
@@ -435,6 +436,9 @@ section {
   transition: all 1s linear;
 }
 
+.card__3 {
+  transition: all 1s linear;
+}
 .card__3 h2 {
   width: 172px;
   margin-top: 45px;
