--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
     max-width: 1320px;
     // width: 100%;
 margin: auto;
+position: relative;
 }
 main{
     margin: auto;
@@ -88,12 +89,12 @@ button {
 
 
     }
-    span{
+    .container span{
         position: absolute;
-        top: 12px;
-        right: 174px;
-        width: 24px;
-        height: 24px;
+        top: 15px;
+        right: 74px;
+        width: 20px;
+        height: 20px;
         border-radius: 50%;
         background: #EB6D20;
         display: flex;
